welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit){return true;}
^Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^